add divide line

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,10 @@ h2 {
     transition: 1s ease;
 }
 
+.divider {
+    border-top: 1px solid black;
+}
+
 /* Modal Customization */
 #customModal {
     text-align: center;
